CVS HEAD:
 * user interface improvements:
   * made it so network dialogs show progress of data transfers again
   * starting position in editor now starts at player 1 (#10625)
   * fixed female units not appearing in help (broken since 0.9.0)
   * reduced required width of weapon area in help
   * better diagnostics on parsing: file inclusion sequence
   * fixed items appearing in traits description (#12603)
   * preserve order of unit traits so no more quick,resilient but 33 vs 34 HP
   * note= attribute for [objectives], shown as footer, eg. for hints (#12927)
 * campaign improvements:
   * Eastern Invasion:
     * fixed Dacyn not being [recall]-ed in Unexpected Appearance (#10619)
     * fixed killing enemies in wrong order not resulting in a victory in
       Northern Outpost (#12922)
     * new map and scenario modification for Drowned Plains
     * changed Skeletal Dragon resistances for Drowned Plains
   * Heir to the Throne:
     * fixed thieves not appearing in Siege of Elensefar (forum thread 5719)
   * Son of the Black Eye:
     * shamans are no longer recallable (#11932)
     * killing enemy leader in Siege of Barag Gor is no longer a win
 * multiplayer improvements:
   * next_scenario: tentative start of MP campaign support
 * unit graphics and sound improvements 
   * new death animations for: Ancient Lich, Ancient Wose, Arch Mage,
     Assassin, Bandit, Battle Princess, Blood Bat, Bone Shooter, Bowman,
     Cavalier, Cavalryman, Cave Spider, Chocobone, Cockatrice,
     Commander, Cuttle Fish, Dark Adept, Dark Queen, Dark Spirit,
     Deathblade, Death Knight, Deathmaster, Demilich, Direwolf_Rider, 
     Dragoon, Duelist, Draug, Drake_Burner, Drake_Clasher, Drake Fighter,
     Drake Fire
   * new attack animations for Halberdier
   * fixed several image files being referred to by wrong name
 * language and i18n:
   * language fixes and polishing (English)
   * clarified Necrophage self-leveling in unit description (#10714)
   * updated MANUAL