@@ -1,5 +1,6 @@
 CVS HEAD:
  * user interface improvements:
+   * fix editor file chooser when starting directory has many files (#11698)
    * made it so network dialogs show progress of data transfers again
    * starting position in editor now starts at player 1 (#10625)
    * fixed female units not appearing in help (broken since 0.9.0)
